new simpler templating system and split out templates from yote.util.

--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -435,8 +435,8 @@ if we are our experiences then we are both sides of them.
       <hr>
        <$$$ control messages <span class="message"></span> $$$>
        <$$ Apps $$>
-       <$$ Cron $$>
-       <$$ Users $$>
+       <#$$ Cron $$#>
+       <#$$ Users $$#>
       <A HREF="#Top">Back to Top</A>
      </DIV>
   </script>
